--- a/src/main/webapp/css/addcourse.css
+++ b/src/main/webapp/css/addcourse.css
@@ -95,4 +95,8 @@ hr.one{
 
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
