--- a/src/main/webapp/css/report.css
+++ b/src/main/webapp/css/report.css
@@ -80,4 +80,8 @@ i{
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
