--- a/src/main/webapp/css/addedcourses.css
+++ b/src/main/webapp/css/addedcourses.css
@@ -65,4 +65,8 @@ table {
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
