--- a/src/main/webapp/css/adminlogin.css
+++ b/src/main/webapp/css/adminlogin.css
@@ -67,5 +67,9 @@ hr.one{
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
