--- a/src/main/webapp/css/chart.css
+++ b/src/main/webapp/css/chart.css
@@ -68,4 +68,8 @@ i{
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
