--- a/src/main/webapp/css/failed.css
+++ b/src/main/webapp/css/failed.css
@@ -26,4 +26,8 @@ i{
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
