--- a/src/main/webapp/css/failedlogin.css
+++ b/src/main/webapp/css/failedlogin.css
@@ -27,4 +27,8 @@ i{
 
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
