--- a/src/main/webapp/css/printresponse.css
+++ b/src/main/webapp/css/printresponse.css
@@ -7,22 +7,15 @@ h2{
     border-color: transparent;
     border-radius: 6px;
     padding: 4px 14px;
-   margin-top: 1%;
+    alignment: center;
     background-color: #0e90d2;
     color: #ffffff;
-    margin-right: 60%;
+
 }
 .form input[type="submit"]:hover{
     border-color: black;
 
 }
 .form p{
-
     font-size: 20px;
-}
-.container{
-    background: #ffffff;
-    border-radius: 10px;
-    padding:30px;
-    box-shadow: 0px 0px 10px 0px #000;
 }
