--- a/src/main/webapp/css/resultsbycourse.css
+++ b/src/main/webapp/css/resultsbycourse.css
@@ -66,5 +66,9 @@ only screen and (max-width: 760px),
 }
 body{
     background-image: url("../img/h.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
